--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "react-ts-rollup-starter-lib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "rimraf dist && tsc --emitDeclarationOnly && rollup --config",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,19 @@
   "bugs": {
     "url": "https://github.com/kraftdorian/react-ts-rollup-starter-lib/issues"
   },
-  "homepage": "https://github.com/kraftdorian/react-ts-rollup-starter-lib#readme"
+  "homepage": "https://github.com/kraftdorian/react-ts-rollup-starter-lib#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.53.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
+  }
 }
