--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "url": "https://github.com/kraftdorian/react-ts-rollup-starter-lib/issues"
   },
   "homepage": "https://github.com/kraftdorian/react-ts-rollup-starter-lib#readme",
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
@@ -26,6 +30,9 @@
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
+    "@types/react": "^17.0.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.53.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
