--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc --emitDeclarationOnly && rollup --config",
+    "build": "rimraf dist && rollup --config",
     "tsc": "tsc",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
